--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -1,121 +1,119 @@
+{% import "helper.html.twig" as helper %}
+
 <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-header">
-        <a class="navbar-brand" href="{{ path('bdd_index') }}" style="padding:11px 20px;">
-            <img src="{{ asset('images/logo_light.svg') }}" style="height:24px;margin:0;" alt="Captain Coaster">
+  <div class="navbar-header">
+    <a class="navbar-brand" href="{{ path('bdd_index') }}" style="padding:11px 20px;">
+      <img src="{{ asset('images/logo_light.svg') }}" style="height:24px;margin:0;" alt="Captain Coaster">
+    </a>
+    <ul class="nav navbar-nav visible-xs-block">
+      <li><a data-toggle="collapse" data-target="#navbar-mobile"><i class="icon-tree5"></i></a></li>
+      <li><a class="sidebar-mobile-main-toggle"><i class="icon-paragraph-justify3"></i></a></li>
+      <li><a class="sidebar-mobile-secondary-toggle"><i class="icon-more"></i></a></li>
+    </ul>
+  </div>
+  <div class="navbar-collapse collapse" id="navbar-mobile">
+    <ul class="nav navbar-nav">
+      <li>
+        <a class="sidebar-control sidebar-main-toggle hidden-xs"><i class="icon-paragraph-justify3"></i></a>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <!-- language switcher -->
+      <li class="dropdown language-switch">
+        <a class="dropdown-toggle" data-toggle="dropdown">
+          {{ app.request.locale|trans }}
+          <span class="caret"></span>
         </a>
-        <ul class="nav navbar-nav visible-xs-block">
-            <li><a data-toggle="collapse" data-target="#navbar-mobile"><i class="icon-tree5"></i></a></li>
-            <li><a class="sidebar-mobile-main-toggle"><i class="icon-paragraph-justify3"></i></a></li>
-            <li><a class="sidebar-mobile-secondary-toggle"><i class="icon-more"></i></a></li>
-        </ul>
-    </div>
-    <div class="navbar-collapse collapse" id="navbar-mobile">
-        <ul class="nav navbar-nav">
+        <ul class="dropdown-menu">
+          {% set route = app.request.attributes.get('_route') %}
+          {% set route_params = app.request.attributes.get('_route_params') %}
+          {% set params = route_params|merge(app.request.query.all) %}
+          {% for locale in locales if locale != app.request.locale %}
             <li>
-                <a class="sidebar-control sidebar-main-toggle hidden-xs"><i class="icon-paragraph-justify3"></i></a>
+              <a href="{{ path(route, params|merge({ _locale: locale })) }}">
+                {{ locale|trans }}
+              </a>
             </li>
+          {% endfor %}
         </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <!-- language switcher -->
-            <li class="dropdown language-switch">
-                <a class="dropdown-toggle" data-toggle="dropdown">
-                    {{ app.request.locale|trans }}
-                    <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                    {% set route = app.request.attributes.get('_route') %}
-                    {% set route_params = app.request.attributes.get('_route_params') %}
-                    {% set params = route_params|merge(app.request.query.all) %}
-                    {% for locale in locales if locale != app.request.locale %}
-                        <li>
-                            <a href="{{ path(route, params|merge({ _locale: locale })) }}">
-                                {{ locale|trans }}
-                            </a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </li>
-            <!-- /language switcher -->
-            <!-- notifications -->
-            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        <i class="icon-bell2"></i>
-                        <span class="visible-xs-inline-block position-right">{{ 'notif.title'|trans }}</span>
-                        {% if app.user.unreadNotifications|length > 0 %}
-                            <span class="badge bg-warning-400">
+      </li>
+      <!-- /language switcher -->
+      <!-- notifications -->
+      {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+            <i class="icon-bell2"></i>
+            <span class="visible-xs-inline-block position-right">{{ 'notif.title'|trans }}</span>
+            {% if app.user.unreadNotifications|length > 0 %}
+              <span class="badge bg-warning-400">
                             {{ app.user.unreadNotifications|length }}
                         </span>
-                        {% endif %}
-                    </a>
-                    <div class="dropdown-menu dropdown-content">
-                        <div class="dropdown-content-heading">{{ 'notif.title'|trans }}</div>
-                        <ul class="media-list dropdown-content-body width-350">
-                            {% for notif in app.user.unreadNotifications %}
-                                <li class="media">
-                                    <div class="media-left">
-                                        <a href="#" class="btn bg-success-400 btn-rounded btn-icon btn-xs">
-                                            <i class="icon-star-full2"></i></a>
-                                    </div>
-
-                                    <div class="media-body">
-                                        <a href="{{ path('notification_read', {'id': notif.id}) }}">
-                                            {{ notif.message|trans({'%name%': notif.parameter|trans}) }}
-                                        </a>
-                                        <div class="media-annotation">{{ notif.createdAt|ago }}</div>
-                                    </div>
-                                </li>
-                            {% else %}
-                                <li>{{ 'notif.empty'|trans }}</li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </li>
-                <!-- /notifications -->
-                <!-- user profile -->
-                <li class="dropdown dropdown-user">
-                    <a class="dropdown-toggle" data-toggle="dropdown">
-                        {% if app.user.profilePicture %}
-                            <img src="{{ app.user.profilepicture }}" alt="{{ app.user.firstname }}">
-                        {% else %}
-                            <img src="{{ asset('images/default_user.png') }}" alt="{{ app.user.firstname }}">
-                        {% endif %}
-                        <span>{{ app.user.firstname }}</span>
-                        <i class="caret"></i>
-                    </a>
-
-                    <ul class="dropdown-menu dropdown-menu-right">
-                        <li>
-                            <a href="{{ path('me') }}"><i class="icon-profile"></i> {{ 'navbar.profile'|trans }}</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('liste_me') }}">
-                                <i class="icon-podium"></i> {{ 'navbar.topcoasters'|trans }}
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{{ path('me_ratings') }}">
-                                <i class="icon-stars"></i> {{ 'navbar.rating'|trans }}
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{{ path('map_user', {'id': app.user.id}) }}">
-                                <i class="icon-location3"></i> {{ 'navbar.my_map'|trans }}
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="{{ path('logout') }}"><i class="icon-switch2"></i> {{ 'navbar.logout'|trans }}</a>
-                        </li>
-                    </ul>
-                </li>
-            {% else %}
-                <li>
-                    <a href="{{ path('hwi_oauth_connect') }}" data-popup="tooltip" title="Login">
-                        <i class="icon-lock display-block"></i>
-                    </a>
-                </li>
             {% endif %}
-            <!-- /user profile -->
-        </ul>
-    </div>
+          </a>
+          <div class="dropdown-menu dropdown-content">
+            <div class="dropdown-content-heading">{{ 'notif.title'|trans }}</div>
+            <ul class="media-list dropdown-content-body width-350">
+              {% for notif in app.user.unreadNotifications %}
+                <li class="media">
+                  <div class="media-left">
+                    <a href="#" class="btn bg-success-400 btn-rounded btn-icon btn-xs">
+                      <i class="icon-star-full2"></i></a>
+                  </div>
+
+                  <div class="media-body">
+                    <a href="{{ path('notification_read', {'id': notif.id}) }}">
+                      {{ notif.message|trans({'%name%': notif.parameter|trans}) }}
+                    </a>
+                    <div class="media-annotation">{{ notif.createdAt|ago }}</div>
+                  </div>
+                </li>
+              {% else %}
+                <li>{{ 'notif.empty'|trans }}</li>
+              {% endfor %}
+            </ul>
+          </div>
+        </li>
+        <!-- /notifications -->
+        <!-- user profile -->
+        <li class="dropdown dropdown-user">
+          <a class="dropdown-toggle" data-toggle="dropdown">
+            {{ helper.profilePicture(app.user, 'img-circle img-xs') }}
+            <span>{{ app.user.firstname }}</span>
+            <i class="caret"></i>
+          </a>
+
+          <ul class="dropdown-menu dropdown-menu-right">
+            <li>
+              <a href="{{ path('me') }}"><i class="icon-profile"></i> {{ 'navbar.profile'|trans }}</a>
+            </li>
+            <li>
+              <a href="{{ path('liste_me') }}">
+                <i class="icon-podium"></i> {{ 'navbar.topcoasters'|trans }}
+              </a>
+            </li>
+            <li>
+              <a href="{{ path('me_ratings') }}">
+                <i class="icon-stars"></i> {{ 'navbar.rating'|trans }}
+              </a>
+            </li>
+            <li>
+              <a href="{{ path('map_user', {'id': app.user.id}) }}">
+                <i class="icon-location3"></i> {{ 'navbar.my_map'|trans }}
+              </a>
+            </li>
+            <li class="divider"></li>
+            <li><a href="{{ path('logout') }}"><i class="icon-switch2"></i> {{ 'navbar.logout'|trans }}</a>
+            </li>
+          </ul>
+        </li>
+      {% else %}
+        <li>
+          <a href="{{ path('hwi_oauth_connect') }}" data-popup="tooltip" title="Login">
+            <i class="icon-lock display-block"></i>
+          </a>
+        </li>
+      {% endif %}
+      <!-- /user profile -->
+    </ul>
+  </div>
 </div>
